Fix email pop modal bug/ columns/ table hover css - System name first word uppercase - Modified columns title name and visible - table hover css

--- a/develop_requirement_proj/static/css/basic.css
+++ b/develop_requirement_proj/static/css/basic.css
@@ -87,7 +87,7 @@
         border-radius:2em;
     }
     /* Handle on hover */
-    div:hover ::-webkit-scrollbar-thumb{
+    ::-webkit-scrollbar-thumb:hover{
         background: var(--secondary);
         border-radius:2em;
         height: 15px;
@@ -153,25 +153,25 @@
         white-space: normal;
         max-height: 5rem;
     }
-    #form_info:hover .ellipsis{
+    /* #form_info:hover .ellipsis{
         overflow:visable;
         max-height: unset;
-    }
+    } */
     /* .blur{
         -webkit-filter: blur(3px) opacity(80%);
         filter: blur(3px) opacity(80%);
     } */
     /* #developersModal table { border: none;} */
     .table td, .table th {
-        padding: .45rem;
+        padding: .25rem;
         max-height: 5em;
     }
-    table tr:hover>td .ellipsis {
+    /* table tr:hover>td .ellipsis {
         overflow: visible;
     }
     table tr:hover>td small.ellipsis{
         white-space: nowrap !important;
-    }
+    } */
     .b-radius-8 {
         border-radius: .8em;
     }
