--- a/develop_requirement_proj/static/css/drs.css
+++ b/develop_requirement_proj/static/css/drs.css
@@ -234,13 +234,13 @@
     }
 
 /* #filelist tr td>.ellipsis:hover{ */
-    tr:hover td .ellipsis{
+    /* tr:hover td .ellipsis{
         overflow: visible;
         word-wrap: break-word;
         white-space: normal;
         border-radius: 1em;
         left: 0;
-    }
+    } */
     .detail-view{
         background-color: transparent !important;
     }
@@ -420,10 +420,10 @@
         max-height: 10rem;
         overflow: hidden;
     }
-    .table td:hover{
+    /* .table td:hover{
         max-height: 20rem;
         overflow:visible;
-    }
+    } */
     .modal .table td,.modal .table th {
         padding: .25rem 10px .25rem 10px;
         /* max-width: 10rem; */
